# search_algorithm_in_ai

./: .gitignore  CMakeLists.txt  README.md
informed_heuristic_search/: CMakeLists.txt  graph.cpp  graph.h  heuristic.cpp  heuristic.h  node.cpp  node.h
informed_heuristic_search/heuristic_search/: CMakeLists.txt  main.cpp
uninformed_blind_search/: CMakeLists.txt
uninformed_blind_search/depth_first_search/: CMakeLists.txt  dfs.cpp  dfs.h  graph.cpp  graph.h  main.cpp  maze.cpp  maze.h  node.cpp  node.h
